final version updated

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </tr>
         <!-- 5th row -->
         <tr>
-          <td><input type="button" value="0" onclick="calculator('0')" /></td>
+          <td id="zero"><input type="button" value="0" onclick="calculator('0')" /></td>
           <td><input type="button" value="." onclick="calculator('.')" /></td>
           <td><input type="button" value="/" onclick="calculator('/')" /></td>
           <td><input type="button" value="=" onclick="answer()" /></td>
